Fix tree pane height blowing out if large tree; and fix sidebar floating off screen if small viewport (was breaking tests as button was off screen)

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -154,12 +154,12 @@ section h3 {
   .opacity(100);
 }
 .as-nav-list.affix {
-  //top: 40px;
+  top: 40px;
 }
 .as-nav-list.affix-bottom {
-  position: absolute;
+  position: absolute !important;
   top: auto;
-  bottom: 270px;
+  bottom: 120px;
 }
 
 /* Desktop large
